--- a/pom.xml
+++ b/pom.xml
@@ -119,5 +119,11 @@
             <version>1.2.9</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.9</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
