--- a/pom.xml
+++ b/pom.xml
@@ -132,5 +132,10 @@
             <version>1.2.9</version>
             <scope>compile</scope>
         </dependency>
+    <dependency>
+        <groupId>org.example</groupId>
+        <artifactId>FrameWork</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
 </dependencies>
     </project>
